TPL-HTML-fixes : toolbar : better text alignment of a objects (buttons)

--- a/zip/TPL-HTML-fixes.css
+++ b/zip/TPL-HTML-fixes.css
@@ -24,4 +24,7 @@ div.toolbar {
 
 div.toolbar a {
 	text-decoration: none;
+	min-width: 1em;
+	text-align: center;
+	padding-right: 0.1em
 }
